@@ -1,3 +1,12 @@
+2010-05-17  Stefan Kost  <ensonic@users.sf.net>
+
+	* TODO:
+	  update some findings.
+
+	* dllwrapper/wine/module.c:
+	  Put out libdir earlier in the internal search path. Also don't build
+	  list of failed dirs, as this is never used anyway.
+
 2010-05-13  Stefan Kost  <ensonic@users.sf.net>
 
 	* autogen.sh:
